--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "vscode-uiw",
-	"displayName": "",
+	"displayName": "uiw document",
 	"description": "Preview uiw document in vscode.",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"icon": "images/icon.png",
 	"engines": {
 		"vscode": "^1.31.0"
