--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "uiw",
 	"icon": "images/icon.png",
 	"description": "Preview uiw document in vscode.",
-	"version": "1.2.4",
+	"version": "1.2.5",
 	"engines": {
 		"vscode": "^1.31.0"
 	},
@@ -355,16 +355,16 @@
 		"test": "npm run compile && node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
-		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42"
-	},
-	"dependencies": {
 		"@types/fs-extra": "^5.0.5",
 		"@types/marked": "^0.6.1",
+		"@types/mocha": "^2.2.42",
+		"@types/node": "^10.12.21",
 		"@types/prismjs": "^1.9.1",
+		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
+		"vscode": "^1.1.28"
+	},
+	"dependencies": {
 		"axios": "^0.18.0",
 		"fs-extra": "^7.0.1",
 		"marked": "^0.6.1",
