--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "uiw",
 	"icon": "images/icon.png",
 	"description": "Preview uiw document in vscode.",
-	"version": "1.2.9",
+	"version": "1.2.10",
 	"engines": {
 		"vscode": "^1.31.0"
 	},
@@ -70,6 +70,7 @@
 		"onCommand:extension.uiwSplit",
 		"onCommand:extension.uiwTag",
 		"onCommand:extension.uiwTabs",
+		"onCommand:extension.uiwTable",
 		"onCommand:extension.uiwTooltip",
 		"onCommand:extension.uiwTimestamp",
 		"onCommand:extension.uiwTimePicker",
@@ -314,6 +315,11 @@
 			{
 				"command": "extension.uiwTabs",
 				"title": "View uiw Tabs document.",
+				"category": "uiw"
+			},
+			{
+				"command": "extension.uiwTable",
+				"title": "View uiw Table document.",
 				"category": "uiw"
 			},
 			{
